backup/examples/core/errors/type_errors/03_not_a_function.core.tao
// Type Error: Not a function
// Trying to apply a non-function value
42(x)
